# Rustynet

./: .gitignore  AGENTS.md  AGENT_MASTER_WORKPLAN_PROMPT.md  AGENT_MISSION_CROSSNET.md  CLAUDE.md  CROSS_NETWORK_MINT_192.168.18.66_DISCOVERY_RUNBOOK.md  Cargo.toml  DIAGNOSTIC_FUNCTIONS_ROADMAP.md  Desktop_Client_Node_192.168.18.37.md  Desktop_Exit_Node_192.168.18.40.md  FEDORA_192.168.18.51_CAPTURE_SUMMARY_2026-03-22.md  LICENSE  MINT_192.168.18.66_CAPTURE_SUMMARY_2026-03-22.md  OpenWorkIndex_2026-04-17.md  README.md  REVIT_ADDIN_GUIDE.md  RUSTYFIN_EXTENSION_TRUST_TODO.md  deny.toml  deploy_and_check.py  deploy_and_check_debian.py  fable5_live_lab_findings_2026-07-03.md  fable5_prompt.md  generic_rustynet_prompt.md  rustynet_hard_problem_prompt.md  rustynet_live_lab_loop_prompt.md  rustynet_repo_context_prompt.md  start.sh
crates/rustynet-backend-userspace/: Cargo.toml
crates/rustynet-backend-userspace/src/: lib.rs
crates/rustynet-backend-userspace/tests/: userspace_conformance.rs
crates/rustynet-backend-wireguard/: Cargo.toml
crates/rustynet-backend-wireguard/benches/: dataplane_engine.rs
crates/rustynet-backend-wireguard/examples/: perfprobe_engine.rs
crates/rustynet-backend-wireguard/src/: bench_support.rs  in_memory.rs  lib.rs  linux_command.rs  macos_command.rs  udp_offload_probe.rs  windows_command.rs
crates/rustynet-backend-wireguard/src/userspace_shared/: engine.rs  fair_drain.rs  handshake.rs  mod.rs  runtime.rs  socket.rs  tun.rs
crates/rustynet-backend-wireguard/src/userspace_shared_macos/: mod.rs  runtime.rs  socket.rs  tun.rs
crates/rustynet-backend-wireguard/tests/: conformance.rs
crates/rustynet-cli/: Cargo.toml
crates/rustynet-cli/src/: anchor_init.rs  env_file.rs  lib.rs  live_lab_coverage.rs  live_lab_evidence_verifier.rs  live_lab_extract.rs  live_lab_results.rs  live_lab_run_matrix.rs  live_lab_stage_manifest.rs  live_lab_stage_recorder.rs  live_lab_stage_registry.rs  live_lab_stage_triage.rs  llm_cli.rs  main.rs  ops_ci_release_perf.rs  ops_cross_network_preflight.rs  ops_cross_network_reports.rs  ops_e2e.rs  ops_fresh_install_os_matrix.rs  ops_install_macos_anchor.rs  ops_install_macos_exit.rs  ops_install_macos_relay.rs  ops_install_systemd.rs  ops_install_systemd_exit.rs  ops_install_systemd_relay.rs  ops_install_systemd_service.rs  ops_live_lab_failure_digest.rs  ops_live_lab_orchestrator.rs  ops_network_discovery.rs  ops_peer_store.rs  ops_phase1.rs  ops_phase9.rs  ops_release_manifest.rs  ops_security_audit.rs  ops_security_audit_workflows.rs  ops_write_daemon_env.rs  release_manifest.rs  role_cli.rs  secret_material.rs  security_audit_catalog.rs
crates/rustynet-cli/src/install/: acquire.rs  common.rs  live_linux.rs  live_macos.rs  live_windows.rs  mod.rs  preflight.rs  uninstall.rs
crates/rustynet-cli/src/vm_lab/: capability.rs  mod.rs  network_audit.rs  network_prepare.rs  network_profile.rs  recover_guest_network.rs  (+2 more)
crates/rustynet-cli/tests/: rnq09_signal_cleanup.rs
crates/rustynet-control/: Cargo.toml
crates/rustynet-control/examples/: perfprobe_membership.rs
crates/rustynet-control/migrations/: 0001_init.sql
crates/rustynet-control/src/: admin.rs  credential_unwrap.rs  enrollment.rs  ga.rs  key_rotation.rs  lib.rs  main.rs  membership.rs  operations.rs  persistence.rs  role_audit.rs  role_presets.rs  roles.rs  scale.rs
crates/rustynet-control/tests/: membership_model_conformance.rs
crates/rustynet-crypto/: Cargo.toml
crates/rustynet-crypto/src/: lib.rs
crates/rustynet-lab-monitor/: Cargo.toml  README.md
crates/rustynet-lab-monitor/fixtures/: stage_manifest_emitted_2026-07-03.json
crates/rustynet-lab-monitor/src/: app.rs  config.rs  main.rs
crates/rustynet-llm-gateway/: Cargo.toml
crates/rustynet-llm-gateway/src/: enforce.rs  engine.rs  health.rs  lib.rs  main.rs  protocol.rs  session.rs
crates/rustynet-mcp/: Cargo.toml  build.rs
crates/rustynet-mcp/src/: lib.rs
crates/rustynet-nas/: Cargo.toml
crates/rustynet-nas/src/: health.rs  lib.rs  main.rs  protocol.rs  store.rs
crates/rustynet-netns-probe/: Cargo.toml
crates/rustynet-netns-probe/src/: main.rs
crates/rustynet-relay/: Cargo.toml
crates/rustynet-relay/benches/: relay_forward.rs
crates/rustynet-relay/examples/: perfprobe_relay.rs
crates/rustynet-relay/src/: hello_limiter_audit.rs  lib.rs  main.rs  rate_limit.rs  session.rs  transport.rs
crates/rustynet-windows-native/: Cargo.toml
crates/rustynet-windows-native/src/: lib.rs
crates/rustynet-xtask/: Cargo.toml
crates/rustynet-xtask/src/: main.rs
crates/rustynetd/: Cargo.toml
crates/rustynetd/benches/: phase1_runtime_baseline.rs
crates/rustynetd/src/: anchor_port_mapping_status.rs  blind_exit_reversal_audit.rs  daemon.rs  dataplane.rs  dataplane_candidates.rs  enrollment_consume.rs  enrollment_replay_audit.rs  enrollment_token.rs  exit_codes.rs  fetcher.rs  gossip_revoked_readmit_audit.rs  gossip_runtime.rs  gossip_transport.rs  ice_priority.rs  ipc.rs  keepalive.rs  key_material.rs  key_rotation.rs  lib.rs  linux_authenticode.rs  linux_blind_exit.rs  linux_blind_exit_dataplane.rs  linux_dns_failclosed.rs  linux_dns_protect.rs  linux_exit_dns_failclosed.rs  linux_exit_nat_lifecycle.rs  linux_ipv6_leak.rs  linux_key_custody.rs  linux_killswitch_boot.rs  linux_mesh_status.rs  linux_runtime_acls.rs  linux_runtime_nftables.rs  linux_service_hardening.rs  macos_authenticode.rs  macos_blind_exit.rs  macos_dns_failclosed.rs  macos_exit_dns_failclosed.rs  macos_exit_killswitch_precedence.rs  macos_exit_nat.rs  macos_exit_nat_lifecycle.rs  (+47 more)
crates/rustynetd/tests/: enrollment_token_audit.rs  enrollment_trust_propagation.rs  enrollment_two_peer_redeem.rs  gossip_three_peer_mesh.rs  ice_pair_race.rs  membership_replay_protection.rs  quorum_multi_approver.rs  role_capability_enforcement.rs  state_fetcher.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ipc_parse_command.rs  membership_decode_signed_update.rs  membership_decode_state.rs
gui/node-map-tool/: CLAUDE_DESIGN_BRIEF.md  Cargo.toml  DATA_CONTRACT.md  README.md  sample-topology.json
gui/node-map-tool/src/: main.rs
(+958 files in other folders)
