[workspace]
members = [
  "crates/rustynet-dns-zone",
  "crates/rustynet-local-security",
  "crates/rustynet-control",
  "crates/rustynetd",
  "crates/rustynet-cli",
  "crates/rustynet-relay",
  "crates/rustynet-policy",
  "crates/rustynet-crypto",
  "crates/rustynet-backend-api",
  "crates/rustynet-backend-wireguard",
  "crates/rustynet-backend-stub",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Rustynet Team"]

[workspace.dependencies]
rand = "0.9.3"

[workspace.lints.rust]
unsafe_code = "forbid"
