[workspace]
members = [
  "crates/rustynet-dns-zone",
  "crates/rustynet-local-security",
  "crates/rustynet-control",
  "crates/rustynetd",
  "crates/rustynet-cli",
  "crates/rustynet-relay",
  "crates/rustynet-nas",
  "crates/rustynet-llm-gateway",
  "crates/rustynet-policy",
  "crates/rustynet-advisor",
  "crates/rustynet-crypto",
  "crates/rustynet-windows-native",
  "crates/rustynet-backend-api",
  "crates/rustynet-backend-wireguard",
  "crates/rustynet-backend-stub",
  "crates/rustynet-backend-userspace",
  "crates/rustynet-sysinfo",
  "crates/rustynet-operator",
  "crates/rustynet-mcp",
  "crates/rustynet-xtask",
  "crates/rustynet-netns-probe",
]
resolver = "2"

# `gui/` and `crates/rustynet-lab-monitor/` hold standalone operator-side UI
# tools (their own workspaces with their own Cargo.lock). They are intentionally
# NOT members of the security-gated workspace: UI stacks pull in large
# transitive dependency trees with assorted licenses, and lab target VMs must
# not resolve UI-only crates while building rustynetd/rustynet-cli offline.
exclude = ["gui", "crates/rustynet-lab-monitor"]

[workspace.package]
edition = "2024"
version = "0.1.0"
# Source-available, noncommercial. See ./LICENSE for the full text + the
# third_party/ carve-out. Not open source (yet): commercial use requires a
# separate license from the copyright holder; may be relicensed to a permissive
# open-source license at a future stable release.
license = "PolyForm-Noncommercial-1.0.0"
authors = ["Iwan Teague"]

[workspace.dependencies]
rand = "0.9.3"

[workspace.lints.rust]
unsafe_code = "forbid"

# ── Release/bench performance profile ────────────────────────────────────────
# Runtime-perf tuning for shipped binaries. Trades build time (release builds
# only — dev/test/incremental are untouched) for faster generated code on the
# hot crypto + dataplane paths. No semantic change; keep only while the
# perfprobe/criterion numbers justify the build-time cost.
#
# - thin LTO lets the dataplane engine inline across the crate boundary into
#   boringtun (the per-packet crypto), which a default build cannot do.
# - codegen-units = 1 is scoped to the hot crypto/dataplane crates only (full
#   intra-crate optimization) to avoid serialising codegen for the whole
#   workspace.
# `[profile.bench]` mirrors release so `cargo bench` measures shipped code.
[profile.release]
lto = "thin"

[profile.release.package.boringtun]
codegen-units = 1

[profile.release.package.rustynet-backend-wireguard]
codegen-units = 1

[profile.release.package.rustynet-relay]
codegen-units = 1

# rustynet-cli links ~30 crates; with thin LTO on a 2Gi VM the linker OOMs.
# codegen-units=16 keeps per-unit memory ~16x smaller so lab VMs can build it.
[profile.release.package.rustynet-cli]
codegen-units = 16

[profile.bench]
lto = "thin"

[profile.bench.package.boringtun]
codegen-units = 1

[profile.bench.package.rustynet-backend-wireguard]
codegen-units = 1

[profile.bench.package.rustynet-relay]
codegen-units = 1
