[package]
name = "rustynet-backend-wireguard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustynet-backend-api = { path = "../rustynet-backend-api" }
base64 = "0.22"
boringtun = { path = "../../third_party/boringtun" }
rustynet-tun = { path = "../../third_party/rustynet-tun" }
zeroize = "1"

[target.'cfg(windows)'.dependencies]
rustynet-windows-native = { path = "../rustynet-windows-native" }

[features]
test-harness = []

[dev-dependencies]
tempfile = "3"
# NEW dev-dependency (flagged): criterion for the dataplane hot-path
# benchmark. `default-features = false` drops the plotters/rayon/html
# tree to keep the supply-chain surface minimal — the bench reports
# plain-text estimates. Dev-only; never in the shipped dependency graph.
criterion = { version = "0.5", default-features = false }
# Dev-only counting allocator for the perfprobe examples (internal
# crate in third_party, no external code; flagged in the perf docs).
rustynet-alloc-meter = { path = "../../third_party/rustynet-alloc-meter" }

[[bench]]
name = "dataplane_engine"
harness = false
required-features = ["test-harness"]

[[example]]
name = "perfprobe_engine"
required-features = ["test-harness"]

[lints]
workspace = true
