[package]
name = "rustynet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "rustynet-cli"

[dependencies]
base64 = "0.22"
rustynet-control = { path = "../rustynet-control" }
rustynet-crypto = { path = "../rustynet-crypto" }
rustynet-dns-zone = { path = "../rustynet-dns-zone" }
rustynet-local-security = { path = "../rustynet-local-security" }
rustynet-policy = { path = "../rustynet-policy" }
rustynetd = { path = "../rustynetd" }
ed25519-dalek = "2"
nix = { version = "0.29", default-features = false, features = ["user"] }
rand.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
zeroize = "1"
