[package]
name = "rustynet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "rustynet-cli"

[features]
chaos-forger = []

[lib]
name = "rustynet_cli"
path = "src/lib.rs"

[[bin]]
name = "live_signed_bundle_forger"
path = "src/bin/live_signed_bundle_forger.rs"
required-features = ["chaos-forger"]

[dependencies]
base64 = "0.22"
rustynet-advisor = { path = "../rustynet-advisor" }
rustynet-control = { path = "../rustynet-control" }
rustynet-sysinfo = { path = "../rustynet-sysinfo" }
rustynet-crypto = { path = "../rustynet-crypto" }
rustynet-dns-zone = { path = "../rustynet-dns-zone" }
rustynet-local-security = { path = "../rustynet-local-security" }
rustynet-operator = { path = "../rustynet-operator" }
rustynet-policy = { path = "../rustynet-policy" }
rustynet-relay = { path = "../rustynet-relay", features = ["daemon"] }
rustynetd = { path = "../rustynetd" }
ed25519-dalek = "2"
nix = { version = "0.29", default-features = false, features = ["user", "net", "fs"] }
rand.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
socket2 = { version = "0.6", features = [] }
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
