[package]
name = "rustynet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "rustynet-cli"

[features]
chaos-forger = []
# RNQ-17 — the lab robot (UTM `vm-lab` fleet control, live-lab orchestrator,
# e2e bootstrap/report command surface, cross-network lab tooling, fresh-install
# OS matrix) is DEFAULT-OFF so the shipped product binary carries none of that
# attack surface (release.yml builds `-p rustynet-cli --bin rustynet-cli` with
# no features). CI gates run `--all-features`, so the lab code stays compiled
# and tested. Lab-driving hosts/guests must build with `--features vm-lab`.
vm-lab = ["dep:zip", "dep:toml", "dep:socket2", "dep:signal-hook"]

[lib]
name = "rustynet_cli"
path = "src/lib.rs"

[[bin]]
name = "live_signed_bundle_forger"
path = "src/bin/live_signed_bundle_forger.rs"
required-features = ["chaos-forger"]

# RNQ-09: the whole-file `#![cfg(feature = "vm-lab")]` gate on this bin is not
# by itself sufficient to keep `cargo check -p rustynet-cli` (no features)
# green — a cfg'd-out binary crate still has zero items, and `rustc` requires
# a `fn main` even then. `required-features` is the mechanism that actually
# makes Cargo skip building this target entirely under default features;
# `tests/rnq09_signal_cleanup.rs` (which spawns it via
# `env!("CARGO_BIN_EXE_rnq09_signal_harness")`) needs `--features vm-lab` too.
[[bin]]
name = "rnq09_signal_harness"
path = "src/bin/rnq09_signal_harness.rs"
required-features = ["vm-lab"]

# The §4.8 independent evidence verifier (NodeEngineAcceptanceSpec, increment
# A2): recomputes a `--node` run's evidence properties from the raw report
# artifacts and is the authority on "valid run" — the orchestrator's
# self-report is advisory. Same gating rationale as rnq09 above:
# `required-features` is what keeps the default no-feature `cargo check`
# from building this target at all.
[[bin]]
name = "live_lab_evidence_verifier"
path = "src/bin/live_lab_evidence_verifier.rs"
required-features = ["vm-lab"]

[dependencies]
base64 = "0.22"
rustynet-advisor = { path = "../rustynet-advisor" }
rustynet-control = { path = "../rustynet-control" }
rustynet-sysinfo = { path = "../rustynet-sysinfo" }
rustynet-crypto = { path = "../rustynet-crypto" }
rustynet-dns-zone = { path = "../rustynet-dns-zone" }
rustynet-local-security = { path = "../rustynet-local-security" }
rustynet-operator = { path = "../rustynet-operator" }
rustynet-policy = { path = "../rustynet-policy" }
rustynet-relay = { path = "../rustynet-relay", features = ["daemon"] }
rustynetd = { path = "../rustynetd" }
ed25519-dalek = "2"
nix = { version = "0.29", default-features = false, features = ["user", "net", "fs"] }
rand.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
socket2 = { version = "0.6", features = [], optional = true }
tar = "0.4"
toml = { version = "0.8", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
zeroize = "1"
tempfile = "3"
signal-hook = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]

[lints]
workspace = true
