[package]
name = "rustynet-control"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustynet-policy = { path = "../rustynet-policy" }
rustynet-crypto = { path = "../rustynet-crypto" }
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
ed25519-dalek = "2"
