[package]
name = "rustynet-control"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustynet-dns-zone = { path = "../rustynet-dns-zone" }
rustynet-policy = { path = "../rustynet-policy" }
rustynet-crypto = { path = "../rustynet-crypto" }
sha2 = "0.10"
hkdf = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
ed25519-dalek = "2"
hmac = "0.12"
rand = "0.8"
zeroize = "1"
nix = { version = "0.29", default-features = false, features = ["user"] }
