[package]
name = "rustynet-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand.workspace = true
sha2 = "0.10"
subtle = "2"
ed25519-dalek = "2"
zeroize = "1"
rustynet-windows-native = { path = "../rustynet-windows-native" }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"
