[package]
name = "rustynet-llm-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ed25519-dalek = "2"
rustynet-policy = { path = "../rustynet-policy" }
sha2 = "0.10"

[features]
default = []
daemon = []

[[bin]]
name = "rustynet-llm-gateway"
required-features = ["daemon"]

[lints]
workspace = true
