[package]
name = "rustynet-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rustynet-mcp-repo-context"
path = "src/bin/repo_context.rs"

[[bin]]
name = "rustynet-mcp-gate-runner"
path = "src/bin/gate_runner.rs"

[[bin]]
name = "rustynet-mcp-lab-state"
path = "src/bin/lab_state.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
