[package]
name = "rustynet-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rustynet-mcp-repo-context"
path = "src/bin/repo_context.rs"

[[bin]]
name = "rustynet-mcp-gate-runner"
path = "src/bin/gate_runner.rs"

[[bin]]
name = "rustynet-mcp-lab-state"
path = "src/bin/lab_state.rs"

[[bin]]
name = "rustynet-mcp-deepseek"
path = "src/bin/deepseek.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", default-features = false, features = ["net"] }
socket2 = "0.6"
ureq = { version = "2", features = ["json"] }

[lints]
workspace = true
