[package]
name = "rustynet-nas"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustynet-crypto = { path = "../rustynet-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zeroize = "1"

[lints]
workspace = true
