[package]
name = "rustynet-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
subtle = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rustynet-control = { path = "../rustynet-control" }
sha2 = { version = "0.10", optional = true }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "sync", "time", "signal"], optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = []
daemon = ["tokio", "tracing", "sha2"]

[[bin]]
name = "rustynet-relay"
required-features = ["daemon"]
