[package]
name = "rustynet-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
subtle = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand.workspace = true
rustynet-control = { path = "../rustynet-control" }
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "macros", "sync", "time", "signal"], optional = true }
tracing = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[target.'cfg(windows)'.dependencies]
rustynet-windows-native = { path = "../rustynet-windows-native" }
windows-service = { version = "0.8", optional = true }

[features]
default = []
daemon = ["tokio", "tracing", "serde", "serde_json", "windows-service"]

[[bin]]
name = "rustynet-relay"
required-features = ["daemon"]
