[package]
name = "rustynet-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
subtle = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand.workspace = true
rustynet-control = { path = "../rustynet-control" }
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "macros", "sync", "time", "signal"], optional = true }
tracing = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[target.'cfg(windows)'.dependencies]
rustynet-windows-native = { path = "../rustynet-windows-native" }
# Windows-only crate (SCM host). Declared as a plain cfg(windows) target
# dependency — NOT an optional dep behind the `daemon` feature — so it is
# never pulled into the dependency graph on Linux/macOS. Every use site is
# `#[cfg(windows)]`, so the relay binary still builds with `--features daemon`
# on non-Windows without it. (A prior `daemon = [..., "windows-service"]`
# feature edge made `cargo build --features daemon` try to download it on
# Linux, breaking offline guest bootstraps where it was never cached.)
windows-service = "0.8"

[dev-dependencies]
# Same flagged dev-only criterion as rustynet-backend-wireguard
# (default-features off: no plotters/rayon/html tree).
criterion = { version = "0.5", default-features = false }

[features]
default = []
daemon = ["tokio", "tracing", "serde", "serde_json"]

[[bin]]
name = "rustynet-relay"
required-features = ["daemon"]

[[bench]]
name = "relay_forward"
harness = false

[lints]
workspace = true
