[package]
name = "rustynet-xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", default-features = false, features = ["signal", "process"] }
serde_json = "1"

[lints]
workspace = true
