[package]
name = "rustynetd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustynet-backend-api = { path = "../rustynet-backend-api" }
rustynet-backend-wireguard = { path = "../rustynet-backend-wireguard" }
rustynet-control = { path = "../rustynet-control" }
rustynet-dns-zone = { path = "../rustynet-dns-zone" }
rustynet-local-security = { path = "../rustynet-local-security" }
rustynet-policy = { path = "../rustynet-policy" }
rustynet-crypto = { path = "../rustynet-crypto" }
ed25519-dalek = "2"
sha2 = "0.10"
nix = { version = "0.29", default-features = false, features = ["fs", "net", "socket", "user"] }
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
