[package]
name = "rustynetd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustynet-backend-api = { path = "../rustynet-backend-api" }
rustynet-backend-wireguard = { path = "../rustynet-backend-wireguard" }
rustynet-control = { path = "../rustynet-control" }
rustynet-dns-zone = { path = "../rustynet-dns-zone" }
rustynet-local-security = { path = "../rustynet-local-security" }
rustynet-policy = { path = "../rustynet-policy" }
rustynet-crypto = { path = "../rustynet-crypto" }
rustynet-relay = { path = "../rustynet-relay" }
# Deliberately unconditional (NOT [target.'cfg(windows)'] like the other
# consumers): rustynetd compiles windows-native on every OS on purpose —
# the dpapi_protect_stub_returns_err_on_non_windows test (key_material.rs)
# proves the non-Windows DPAPI stub fails closed, and the pure conversion
# windows_adapter_snapshots_to_host_candidates (dataplane_candidates.rs)
# is unit-tested on non-Windows hosts. This is the intended end state.
rustynet-windows-native = { path = "../rustynet-windows-native" }
ed25519-dalek = "2"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
subtle = "2"
nix = { version = "0.29", default-features = false, features = ["fs", "net", "socket", "user"] }
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
log = "0.4"
rand.workspace = true
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
rustynet-tun = { path = "../../third_party/rustynet-tun" }

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[features]
test-harness = ["rustynet-backend-wireguard/test-harness"]

[lints.rust]
# Downgrade workspace `unsafe_code = "forbid"` to `deny` so the scoped
# `#[allow(unsafe_code)]` on `macos_utun_helper_unsafe` can take effect.
# That module is the only place in rustynetd permitted to use unsafe; it
# contains the SCM_RIGHTS fd-passing primitives for the macOS utun
# privileged-helper path. All other modules in the crate still individually
# pin `#![forbid(unsafe_code)]` at the top of their files.
unsafe_code = "deny"
